Java 17로 다운그레이드.